crates/mockql-core/src/graphql/snapshots/mock_response_prompt/mockql_core__graphql__mock_response_prompt__tests__add_to_extensions_inserts_into_existing_mock_response.snap
---
source: crates/mockql-core/src/graphql/mock_response_prompt.rs
expression: "serde_json::to_string_pretty(&extensions).unwrap()"
---
{
  "mockResponse": {
    "reasoning": "test reasoning",
    "debug": {
      "format": "json",
      "graphqlOperation": "{ me { name } }",
      "partialResponse": null,
      "mockedFields": [],
      "promptMarkdown": "## GraphQL Mock Response Specification\n### Instructions\nYou are a GraphQL mock response generator.\n\nYou are given:\n- A GraphQL operation (query/mutation + fragments)\n- Variables\n- A GraphQL schema (minified)\n- A \"Fields To Mock\" list containing {path, hint, return_type, optional listLength}\n\nTask:\n1. Produce exactly ONE response: a single minified JSON object (no markdown, no extra text).\n2. The response MUST have this shape:\n   {\"data\": <root>, \"extensions\": {\"mockResponse\": {\"reasoning\": <string>}}}\n   - Do NOT include \"errors\" unless explicitly instructed to.\n3. \"data\" MUST match the operation selection set exactly:\n   - Include ONLY fields requested by the operation (including fragment fields).\n   - Do NOT include non-selected fields, even as null.\n   - Honor field aliases: if the operation uses `alias: field`, the JSON key MUST be `alias`.\n   - Include `__typename` ONLY where the operation requests it.\n     * For object fields, set `__typename` to that object type name.\n     * For union/interface fields, set `__typename` per the \"Unions / Interfaces\" rules below.\n4. Use Variables to populate behavior and realism where relevant (locale, currency, device, etc).\n\nMock data rules:\n1. Nullability:\n   - If a selected field is non-null (`!`), do NOT return null. Use a plausible default instead.\n   - If a field is nullable, you MAY return null, but prefer realistic values unless the hint implies missing data.\n2. Lists:\n   - If `### Partial Response` includes a list at a mocked field or at any ancestor path of a mocked field, the generated list at that path MUST have the same number of items.\n   - Example: if mocking `me.reviews.body` and `### Partial Response` is `{\"me\":{\"reviews\":[{\"id\":\"rev-1\"},{\"id\":\"rev-2\"},{\"id\":\"rev-3\"}]}}`, the generated `me.reviews` list MUST contain 3 items, and `me.reviews[*].body` MUST be generated for each of those 3 items.\n3. Unions / Interfaces:\n   - When the operation uses inline fragments on a union/interface, choose `__typename` ONLY from the fragment-covered types.\n   - If multiple fragment-covered types exist, pick one that best matches the hint/domain.\n   - Do not invent union members not present in the operation fragments.\n   - If no fragment-covered concrete types are available, choose a concrete type allowed by the schema.\n4. Enums:\n   - Use only values allowed by the schema.\n   - Prefer values consistent with Variables and hint/domain.\n5. Scalars and selection:\n   - String-like scalars (UUID, URL, Locale) must serialize as JSON strings.\n   - If the operation selects subfields under a field, that field MUST be an object in JSON (not a scalar).\n   - All string values MUST be single-line (no literal newline characters).\n6. Hints:\n   - Apply \"Fields To Mock\" hints by exact `path` match (dot-separated).\n   - If a path targets a list field, apply the hint to each list item at that path.\n   - The hint influences only that field’s generated content and its descendants.\n   - If hints exist in multiple places, \"Fields To Mock\" is the source of truth.\n7. Output constraints:\n   - Output must be valid JSON and minified (no pretty printing).\n   - Escape characters correctly (quotes, backslashes). No trailing commas.\n   - `extensions.mockResponse.reasoning` must be a single-line string <= 240 characters (no step-by-step).\n### Minified GraphQL Schema\n#### Notation\nT = type, I = input, E = enum, s = String, i = Int, b = Boolean, f = Float, ! = required, [] = list\n```\nT:Query:me:User\n```\n### GraphQL Operation\n```graphql\n{ me { name } }\n```\n### Variables\n```json\n{}\n```\n### Fields To Mock\n```json\n[]\n```\n"
    }
  }
}
